<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/cost_of_service_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:paddingTop="15dp"
        app:srcCompat="@drawable/ic_baseline_store_24"
        app:layout_constraintEnd_toStartOf="@id/cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toEndOf="@id/cost_of_service_icon"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_room_service_24"
        app:layout_constraintEnd_toStartOf="@id/service_question"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service"/>
    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

    <RadioGroup
        android:id="@+id/tip_options"
        style="@style/Widget.TipTime.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/service_question">

        <RadioButton
            android:id="@+id/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ok_15" />

    </RadioGroup>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/tip_options"
    app:layout_constraintEnd_toStartOf="@id/round_up_switch"
    android:paddingTop="15dp"
    android:paddingRight="4dp"
    app:srcCompat="@drawable/ic_baseline_call_made_24"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up_the_tip"
        android:fontFamily="sans-serif-medium"
        style="@style/Widget.CompoundButton.Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="@id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        style="@style/Widget.TipTime.TextView"
        tools:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="@id/calculate_button"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>